--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,9 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.4"
+  },
+  "dependencies": {
+    "ionic-audio": "^1.3.0",
+    "ngCordova": "^0.1.24-alpha"
   }
 }
